--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "SimpleDirectMediaLayer"
 uuid = "98e33af6-2ee5-5afd-9e75-cbc738b767c4"
 repo = "https://github.com/jonathanBieler/SimpleDirectMediaLayer.jl.git"
-version = "0.5.0"
+version = "0.5.1"
 
 [deps]
 CEnum = "fa961155-64e5-5f13-b03f-caf6b980ea82"
@@ -13,13 +13,13 @@ SDL2_ttf_jll = "ca9d4746-8a27-5104-babe-80f83b336947"
 alsa_plugins_jll = "5ac2f6bb-493e-5871-9171-112d4c21a6e7"
 
 [compat]
-CEnum = "0.4"
-ColorTypes = "0.8, 0.9, 0.10, 0.11"
-SDL2_image_jll = "2.6.2"
-SDL2_jll = "2.24.2"
-SDL2_mixer_jll = "2.6.2"
-SDL2_ttf_jll = "2.0.15"
-julia = "1.3"
+#CEnum = "0.4"
+#ColorTypes = "0.8, 0.9, 0.10, 0.11"
+#SDL2_image_jll = "2.6.2"
+#SDL2_jll = "2.24.2"
+#SDL2_mixer_jll = "2.6.2"
+#SDL2_ttf_jll = "2.0.15"
+#julia = "1.3"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
